--- a/vegas_en.html
+++ b/vegas_en.html
@@ -22,6 +22,7 @@
   <script src="../sherpa/jquery-2.1.0.js"></script>
   <script src='../sherpa/lodash-2.4.1.js'></script>
   <script src='../sherpa/has.js'></script>
+  <script type="text/javascript" src="../sherpa/FileSaver.js"></script>
 
   <!-- PhET common code that must be loaded pre-RequireJS -->
   <script src="../phetcommon/js/util/query-parameters.js"></script>
