--- a/vegas_en.html
+++ b/vegas_en.html
@@ -51,7 +51,9 @@
 
     if ( brand === 'phet-io' ) {
       preloads = preloads.concat( [
-        '../phet-io/js/phet-io-initialize-globals.js'
+        '../phet-io/js/phet-io-initialize-globals.js',
+        '../vegas/js/phet-io/vegas-phet-io-elements-baseline.js',
+        '../vegas/js/phet-io/vegas-phet-io-elements-overrides.js'
       ] );
     }
 
