Validate that types and type metadata are identical, grunt update all repos, see https://github.com/phetsims/phet-io/issues/1515

--- a/vegas_en.html
+++ b/vegas_en.html
@@ -52,7 +52,8 @@
     preloads = preloads.concat( [
       '../phet-io/js/phet-io-initialize-globals.js',
       '../vegas/js/phet-io/vegas-phet-io-elements-baseline.js',
-      '../vegas/js/phet-io/vegas-phet-io-elements-overrides.js'
+      '../vegas/js/phet-io/vegas-phet-io-elements-overrides.js',
+      '../vegas/js/phet-io/vegas-phet-io-types.js'
     ] );
   }
 
