--- a/vegas_en.html
+++ b/vegas_en.html
@@ -62,6 +62,10 @@
         "requirejsNamespace": "TAMBO"
       },
       {
+        "repo": "twixt",
+        "requirejsNamespace": "TWIXT"
+      },
+      {
         "repo": "vegas",
         "requirejsNamespace": "VEGAS"
       }
