--- a/vegas_en.html
+++ b/vegas_en.html
@@ -95,6 +95,7 @@
 
   if ( brand === 'phet-io' ) {
     preloads = preloads.concat( [
+      '../chipper/js/phet-io/phetioCompareAPIs.js',
       '../phet-io/js/phet-io-initialize-globals.js',
       '../vegas/js/vegas-phet-io-overrides.js'
     ] );
