--- a/vegas_en.html
+++ b/vegas_en.html
@@ -37,7 +37,8 @@
         "supportedBrands": [
           "phet",
           "adapted-from-phet"
-        ]
+        ],
+        "supportsSound": true
       },
       "eslintConfig": {
         "extends": "../chipper/eslint/sim_eslintrc.js"
