convert supportsSound to boolean, and nest under "features" in package.json, https://github.com/phetsims/chipper/issues/1031

--- a/vegas_en.html
+++ b/vegas_en.html
@@ -38,7 +38,9 @@
           "phet",
           "adapted-from-phet"
         ],
-        "supportsSound": true
+        "features": {
+          "supportsSound": true
+        }
       },
       "eslintConfig": {
         "extends": "../chipper/eslint/sim_eslintrc.js"
