rename "features" to "simFeatures" in package.json, https://github.com/phetsims/chipper/issues/1031

--- a/vegas_en.html
+++ b/vegas_en.html
@@ -38,7 +38,7 @@
           "phet",
           "adapted-from-phet"
         ],
-        "features": {
+        "simFeatures": {
           "supportsSound": true
         }
       },
