--- a/vegas_en.html
+++ b/vegas_en.html
@@ -40,7 +40,8 @@
         ],
         "simFeatures": {
           "supportsSound": true
-        }
+        },
+        "supportsOutputJS": true
       },
       "eslintConfig": {
         "extends": "../chipper/eslint/sim_eslintrc.js"
