--- a/vegas_en.html
+++ b/vegas_en.html
@@ -39,7 +39,8 @@
           "adapted-from-phet"
         ],
         "simFeatures": {
-          "supportsSound": true
+          "supportsSound": true,
+          "supportsDynamicLocale": true
         },
         "supportsOutputJS": true
       },
