Adding screenNameKeys to package.json (and adding some translated strings to some runnables), see https://github.com/phetsims/chipper/issues/1367

--- a/vegas_en.html
+++ b/vegas_en.html
@@ -42,7 +42,12 @@
           "supportsSound": true,
           "supportsDynamicLocale": true
         },
-        "supportsOutputJS": true
+        "supportsOutputJS": true,
+        "screenNameKeys": [
+          "VEGAS/screen.components",
+          "VEGAS/screen.finiteChallenges",
+          "VEGAS/screen.infiniteChallenges"
+        ]
       },
       "eslintConfig": {
         "extends": "../chipper/eslint/sim_eslintrc.js",
@@ -52,7 +57,16 @@
               "**/*.ts"
             ],
             "rules": {
-              "@typescript-eslint/ban-ts-comment": "error"
+              "@typescript-eslint/no-explicit-any": "error",
+              "@typescript-eslint/ban-ts-comment": [
+                "error",
+                {
+                  "ts-expect-error": "allow-with-description",
+                  "ts-ignore": true,
+                  "ts-check": true,
+                  "ts-nocheck": true
+                }
+              ]
             }
           }
         ]
