--- a/vegas_en.html
+++ b/vegas_en.html
@@ -16,7 +16,7 @@
 
 
 <script type="text/javascript">
-  /*eslint-disable quotes, quote-props*/
+  /* eslint-disable quotes, quote-props */
 
   window.phet = window.phet || {};
   window.phet.chipper = window.phet.chipper || {};
@@ -41,7 +41,8 @@
         ],
         "simFeatures": {
           "supportsSound": true,
-          "supportsDynamicLocale": true
+          "supportsDynamicLocale": true,
+          "supportsInteractiveDescription": true
         },
         "supportsOutputJS": true,
         "screenNameKeys": [
